# tezos

./: .gitlab-ci.yml  .gitmodules  Makefile  active_protocol_versions  dune  install-deps.sh  instructions.md  irmin_pins  only-context.py  opam-list.txt  vendor.sh
docs/: index.rst
docs/doc_gen/: dune  node_helpers.ml
docs/introduction/: howtoget.rst
docs/user/: glossary.rst  history_modes.rst  snapshots.rst
docs/whitedoc/: storage.rst  the_big_picture.rst
scripts/: version.sh
src/bin_client/: dune  tezos-client.opam
src/bin_node/: dune  main.ml  node_bench_command.ml  node_config_command.ml  node_config_file.ml  node_config_file.mli  node_data_version.ml  node_data_version.mli  node_data_version_state.ml  node_reconstruct_command.ml  node_run_command.ml  node_selfcontained_command.ml  node_shared_arg.ml  node_shared_arg.mli  node_snapshot_command.ml  node_snapshot_command.mli  node_storage_command.ml  node_upgrade_command.ml  tezos-node.opam
src/bin_sandbox/: command_node_synchronization.ml  dune
src/bin_validation/: dune  tezos-validator.opam  validator.ml
src/lib_base/: block_locator.ml  block_locator.mli
src/lib_base/unix/: socket.ml
src/lib_client_base/: tezos-client-base.opam
src/lib_client_commands/: client_admin_commands.ml
src/lib_context/: context.ml  context.mli  context_dump.ml  context_dump.mli  context_dump_intf.ml  dune  dune-project  tezos-context.opam
src/lib_context/encoding/: context.ml  context.mli
src/lib_context/helpers/: context.ml  context.mli
src/lib_context/memory/: context.ml  context.mli
src/lib_context/sigs/: context.ml
src/lib_context/test/: dune  test.ml  test_context.ml
src/lib_crypto/: signature.ml
src/lib_protocol_environment/: dummy_context.ml  dune  environment_context.ml  environment_context.mli  memory_context.ml  shell_context.ml  shell_context.mli  tezos-shell-context.opam
src/lib_protocol_updater/: dune  tezos-protocol-updater.opam
src/lib_proxy/: light_core.ml
src/lib_proxy/test/: test_fuzzing_light.ml
src/lib_shell/: block_directory.ml  block_directory.mli  block_validator.ml  block_validator.mli  block_validator_process.ml  block_validator_process.mli  bootstrap_pipeline.ml  bootstrap_pipeline.mli  chain_directory.ml  chain_directory.mli  chain_validator.ml  chain_validator.mli  chain_validator_event.ml  distributed_db.ml  distributed_db.mli  distributed_db_requester.ml  distributed_db_requester.mli  dune  injection_directory.ml  monitor_directory.ml  node.ml  node.mli  p2p_reader.ml  p2p_reader.mli  patch_context.ml  peer_validator.ml  peer_validator.mli  prevalidation.ml  prevalidation.mli  prevalidator.ml  protocol_directory.ml  protocol_directory.mli  protocol_validator.ml  protocol_validator.mli  snapshots.ml  state.ml  state.mli  store.ml  store.mli  tezos-shell.opam  (+2 more)
src/lib_shell/test/: dune  shell_test_helpers.ml  test.ml  test_locator.ml  test_protocol_validator.ml  test_shell.ml  test_validator.ml
src/lib_shell_services/: block_services.ml  block_services.mli  block_validator_errors.ml  block_validator_errors.mli  chain_services.ml  history_mode.ml  history_mode.mli  snapshot_version.ml  snapshot_version.mli  store_errors.ml
src/lib_stdlib/: lwt_utils.ml  lwt_utils.mli  tzList.ml  tzList.mli
src/lib_stdlib_unix/: lwt_utils_unix.ml  lwt_utils_unix.mli
src/lib_storage/: context.ml  context.mli  context_dump.ml  context_dump.mli  tezos-storage.opam
src/lib_storage/test_flat/: dune  test.ml  test.sh
src/lib_store/: block_key.ml  block_key.mli  block_level.ml  block_level.mli  block_repr.ml  block_repr.mli  block_store.ml  block_store.mli  cemented_block_store.ml  cemented_block_store.mli  chain_config.ml  chain_config.mli  dune  floating_block_index.ml  floating_block_index.mli  floating_block_store.ml  floating_block_store.mli  legacy.ml  legacy.mli  naming.ml  naming.mli  protocol_store.ml  protocol_store.mli  reconstruction.ml  reconstruction.mli  reconstruction_errors.ml  snapshots.ml  snapshots.mli  snapshots_events.ml  store.ml  store.mli  store_events.ml  store_types.ml  store_types.mli  stored_data.ml  stored_data.mli  tezos-legacy-store.opam  tezos-store.opam
src/lib_store/legacy_store/: dune  legacy_chain.ml  legacy_snapshots.ml  legacy_snapshots.mli  legacy_state.ml  legacy_state.mli  legacy_store.ml  legacy_store.mli  legacy_store_builder.ml  tezos-legacy-store.opam
src/lib_store/legacy_store/test/: test.ml
src/lib_store/test/: alpha_utils.ml  assert.ml  dune  legacy_store_maker.ml  legacy_utils.ml  test.ml  test_block_store.ml  test_cemented_store.ml  test_freeze.ml  test_history_mode_switch.ml  test_legacy.ml  test_protocol_store.ml  test_reconstruct.ml  test_snapshots.ml  test_store.ml  test_testchain.ml  test_utils.ml
src/lib_validation/: block_validation.ml  block_validation.mli  dune  external_validation.ml  external_validation.mli  tezos-validation.opam
src/proto_008_PsyTYe6o/bin_baker/: dune  tezos-baker-008-PsyTYe6o.opam
src/proto_008_PsyTYe6o/lib_client/: dune  tezos-client-008-PsyTYe6o.opam
src/proto_008_PsyTYe6o/lib_client/test/: dune
src/proto_008_PsyTYe6o/lib_client_commands/: dune  tezos-client-008-PsyTYe6o-commands-registration.opam  tezos-client-008-PsyTYe6o-commands.opam
src/proto_008_PsyTYe6o/lib_client_sapling/: dune  tezos-client-sapling-008-PsyTYe6o.opam
src/proto_008_PsyTYe6o/lib_mempool/: dune  tezos-mempool-008-PsyTYe6o.opam
src/proto_008_PsyTYe6o/lib_protocol/test/: dune  main.ml  test_sapling.ml  typechecking.ml
src/proto_008_PsyTYe6o/lib_protocol/test/helpers/: block.ml  dune  tezos-008-PsyTYe6o-test-helpers.opam
tests_python/launchers/: sandbox.py
tests_python/tests/: conftest.py  test_legacy_snapshots.py  test_legacy_upgrade.py  test_multinode_snapshot.py  test_multinode_storage_reconstruction.py
tests_python/tools/: utils.py
tezt/lib_tezos/: node.ml  node.mli
tezt/manual_tests/: migration.ml
tezt/tests/: bootstrap.ml
vendors/dev/irmin-pack/: irmin-pack.opam
vendors/dev/irmin-pack/irmin-pack/: intv.ml  intv.mli
vendors/dev/ppx_irmin/: ppx_irmin.opam
vendors/flextesa-lib/: tezos_node.ml
(+57 files in other folders)
