(library
 (name tezos_context)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-context)
 (libraries tezos-base
            tezos-shell-services
            logs.fmt
            digestif.c
            irmin
            irmin-pack
            irmin-pack.layered
            tezos-stdlib-unix
            tezos-context.sigs
            tezos-context.helpers
            tezos-context.encoding
            mtime mtime.clock.os
            rusage)
 (flags (:standard -open Tezos_shell_services
                   -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_stdlib)))
