(library
 (name tezos_legacy_store)
 (public_name tezos-legacy-store)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-shell-services
            tezos-stdlib-unix
            tezos-lmdb)
 (flags (:standard -open Tezos_shell_services
                   -open Tezos_base
                   -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_stdlib)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
