(executables
 (names test)
 (libraries tezos-base
            tezos-store
            tezos-stdlib-unix
            tezos-embedded-protocol-genesis
            tezos-embedded-protocol-demo-noops
            tezos-embedded-protocol-alpha
            tezos-protocol-alpha-parameters
            alcotest-lwt)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_store
                   -open Tezos_shell_services
                   -open Tezos_stdlib_unix
                   -open Tezos_protocol_alpha_parameters)))

(alias
 (name buildtest)
 (deps test.exe))

(alias
 (name runtest)
 (action (chdir %{workspace_root} (run %{exe:test.exe}))))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
