(executables
 (names test test_legacy)
 (libraries tezos-base
            tezos-store
	    tezos-shell
	    tezos-legacy-store
            tezos-stdlib-unix
            tezos-embedded-protocol-genesis
            tezos-embedded-protocol-demo-noops
            tezos-embedded-protocol-alpha
            tezos-protocol-alpha-parameters
            tezos-protocol-genesis
            tezos-validation
            alcotest-lwt)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_store
		   -open Tezos_legacy_store
                   -open Tezos_shell_services
                   -open Tezos_stdlib_unix
                   -open Tezos_validation
                   -open Tezos_protocol_alpha_parameters)))

(alias
 (name buildtest)
 (deps
   ../legacy_store/legacy_store_builder.exe
   test.exe
   test_legacy.exe))

(alias
 (name runtest_store)
 (action
  (setenv SLOW_TEST false
   (run %{exe:test.exe}))))

(alias
 (name runtest_store_legacy)
 (deps (:legacy_builder ../legacy_store/legacy_store_builder.exe))
 (action (run %{exe:test_legacy.exe} --builder-path %{legacy_builder})))

(alias
 (name runtest_store_slow)
 (action
  (setenv SLOW_TEST true
   (run %{exe:test.exe}))))

(alias
 (name runtest)
 (package tezos-store)
 (deps
  (alias runtest_store)
  (alias runtest_store_legacy)))


(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
