(executable
 (name main_baker_008_PsyTYe6o)
 (public_name tezos-baker-008-PsyTYe6o)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-008-PsyTYe6o-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PsyTYe6o
                   -open Tezos_client_008_PsyTYe6o
                   -open Tezos_client_commands
                   -open Tezos_baking_008_PsyTYe6o_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
