(library
 (name tezos_client_008_PsyTYe6o)
 (public_name tezos-client-008-PsyTYe6o)
 (libraries tezos-base
            tezos-protocol-008-PsyTYe6o
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-008-PsyTYe6o-parameters)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_008_PsyTYe6o
                   -open Tezos_protocol_008_PsyTYe6o_parameters
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
