(library
 (name tezos_client_sapling_008_PsyTYe6o)
 (public_name tezos-client-sapling-008-PsyTYe6o)
 (libraries tezos-base
            tezos-crypto
            tezos-client-base
            tezos-signer-backends
            tezos-client-008-PsyTYe6o
            tezos-client-008-PsyTYe6o-commands
            tezos-protocol-008-PsyTYe6o)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base
                   -open Tezos_client_008_PsyTYe6o
                   -open Tezos_client_008_PsyTYe6o_commands
                   -open Tezos_protocol_008_PsyTYe6o
                   -open Tezos_protocol_environment_008_PsyTYe6o)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
