(library
 (name tezos_mempool_008_PsyTYe6o)
 (public_name tezos-mempool-008-PsyTYe6o)
 (libraries tezos-base
            tezos-embedded-protocol-008-PsyTYe6o
            tezos-protocol-008-PsyTYe6o)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_embedded_protocol_008_PsyTYe6o
                   -open Tezos_protocol_008_PsyTYe6o)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
