opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"        {>= "4.08.0"}
  "dune"         {>= "2.7.0"}
  "irmin"        
  "irmin-layers" 
  "ppx_irmin"    
  "index"        {>= "1.2.1"}
  "fmt"
  "logs"
  "lwt"
  "mtime"
  "cmdliner"
]

synopsis: "Irmin backend which stores values in a pack file"
