(library
 (name tezos_008_PsyTYe6o_test_helpers)
 (public_name tezos-008-PsyTYe6o-test-helpers)
 (libraries alcotest-lwt
            tezos-base
            tezos-stdlib-unix
            tezos-shell-services
            tezos-protocol-environment
            tezos-protocol-008-PsyTYe6o
            tezos-protocol-008-PsyTYe6o-parameters
            tezos-client-008-PsyTYe6o)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_stdlib_unix
                   -open Tezos_protocol_008_PsyTYe6o
                   -open Tezos_client_008_PsyTYe6o
                   -open Tezos_protocol_environment_008_PsyTYe6o
                   -open Tezos_shell_services)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
